--- a/blog/package.json
+++ b/blog/package.json
@@ -13,6 +13,8 @@
     "init": "^0.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
+    "react-router-dom": "^7.4.0",
     "tailwind": "^4.0.0"
   },
   "devDependencies": {
