--- a/blog/package.json
+++ b/blog/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/typography": "^0.5.16",
+    "axios": "^1.8.4",
     "init": "^0.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
